Fix shelf view background height when overflow

--- a/src/Shelf.css
+++ b/src/Shelf.css
@@ -1,5 +1,4 @@
 .c-mobile-shelf.visible {
-  height: calc(100vh - 55px);
   min-height: calc(100vh - 55px);
   position: absolute;
   z-index: 600;
